Define bundle path variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,21 +5,23 @@ project( openssl )
 include( ExternalProject )
 
 if( IOS )
-add_library(crypto STATIC IMPORTED)
-set_target_properties(crypto
-  PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a)
+set (OPENSSL_BUNDLE_INCLUDE_PATH, "${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/include")
+set (OPENSSL_BUNDLE_LIB_PATH, "${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib")
 
+add_library(crypto STATIC IMPORTED)
+set_target_properties(crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a)
 add_library(ssl STATIC IMPORTED)
-set_target_properties(ssl
-  PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a)
+set_target_properties(ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a)
+
 endif()
 
 if (ANDROID)
-add_library(crypto STATIC IMPORTED)
-set_target_properties(crypto
-  PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libcrypto.a)
+set (OPENSSL_BUNDLE_INCLUDE_PATH, "${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/include")
+set (OPENSSL_BUNDLE_LIB_PATH, "${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib")
 
+add_library(crypto STATIC IMPORTED)
+set_target_properties(crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libcrypto.a)
 add_library(ssl STATIC IMPORTED)
-set_target_properties(ssl
-  PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libssl.a)
+set_target_properties(ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libssl.a)
+
 endif()
