--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,10 @@ include( ExternalProject )
 
 if( IOS )
 set (OPENSSL_USE_STATIC_LIBS TRUE PARENT_SCOPE)
-set (OPENSSL_ROOT_DIR openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH} PARENT_SCOPE)
-set (OPENSSL_INCLUDE_DIR openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/include PARENT_SCOPE)
-set (OPENSSL_CRYPTO_LIBRARY openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a PARENT_SCOPE)
-set (OPENSSL_SSL_LIBRARY openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a PARENT_SCOPE)
-set (OPENSSL_LIBRARIES "${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY}" PARENT_SCOPE)
+set (OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH} PARENT_SCOPE)
+set (OPENSSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/include PARENT_SCOPE)
+set (OPENSSL_CRYPTO_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a PARENT_SCOPE)
+set (OPENSSL_SSL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a PARENT_SCOPE)
 
 add_library(crypto STATIC IMPORTED)
 set_target_properties(crypto PROPERTIES IMPORTED_LOCATION openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a)
@@ -23,7 +22,6 @@ set (OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/a
 set (OPENSSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/include PARENT_SCOPE)
 set (OPENSSL_CRYPTO_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libcrypto.a PARENT_SCOPE)
 set (OPENSSL_SSL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libssl.a PARENT_SCOPE)
-set (OPENSSL_LIBRARIES "${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY}" PARENT_SCOPE)
 
 add_library(crypto STATIC IMPORTED)
 set_target_properties(crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/android/openssl-${ANDROID_ABI}/lib/libcrypto.a)
