--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,15 @@ include( ExternalProject )
 
 if( IOS )
 set (OPENSSL_USE_STATIC_LIBS TRUE PARENT_SCOPE)
-set (OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH} PARENT_SCOPE)
-set (OPENSSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/include PARENT_SCOPE)
-set (OPENSSL_CRYPTO_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a PARENT_SCOPE)
-set (OPENSSL_SSL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a PARENT_SCOPE)
+set (OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_ios_build_scripts/output/${IOS_PLATFORM_NAME} PARENT_SCOPE)
+set (OPENSSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openssl_ios_build_scripts/output/${IOS_PLATFORM_NAME}/include PARENT_SCOPE)
+set (OPENSSL_CRYPTO_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_ios_build_scripts/output/${IOS_PLATFORM_NAME}/lib/libcrypto.a PARENT_SCOPE)
+set (OPENSSL_SSL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openssl_ios_build_scripts/output/${IOS_PLATFORM_NAME}/lib/libssl.a PARENT_SCOPE)
 
 add_library(crypto STATIC IMPORTED)
-set_target_properties(crypto PROPERTIES IMPORTED_LOCATION openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libcrypto.a)
+set_target_properties(crypto PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/openssl_ios_build_scripts/output/${IOS_PLATFORM_NAME}/lib/libcrypto.a)
 add_library(ssl STATIC IMPORTED)
-set_target_properties(ssl PROPERTIES IMPORTED_LOCATION openssl-binaries/openssl_build_scripts/output/ios/openssl-${IOS_ARCH}/lib/libssl.a)
+set_target_properties(ssl PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/openssl_build_scripts/output/${IOS_PLATFORM_NAME}/lib/libssl.a)
 
 elseif (ANDROID)
 set (OPENSSL_USE_STATIC_LIBS TRUE PARENT_SCOPE)
